# comp2024b

./: .gitignore  CMakeLists.txt  README.md
include/: app.h  gfx.h  gui.h  input.h  model.h  screen.h  setup.h  window.h
shaders/src/: compile.bat  fs_blinn_phong.sc  fs_blit.sc  fs_fog.sc  fs_unlit.sc  varying.def.sc  vs_blinn_phong.sc  vs_blit.sc  vs_fog.sc  vs_unlit.sc
src/: app.cpp  gfx.cpp  gui.cpp  main.cpp  model.cpp  screen.cpp  times.cpp  window.cpp
src/components/: CMakeLists.txt  camera.cpp  camera.h  camera_control_data.h  render.h  transform.cpp  transform.h
src/core/: CMakeLists.txt  app.cpp  app.h  gfx.cpp  gfx.h  gui.cpp  gui.h  input.cpp  model.h  screen.cpp  screen.h  times.h  types.h  window.cpp
src/core/graphic/: CMakeLists.txt  binary_reader.h  model.cpp  model.h  shader.cpp  shader.h
src/systems/: CMakeLists.txt  camera_control.cpp  camera_control.h  rendering.cpp  rendering.h
